k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80       # Service port (Ingress yahi call karega)
      targetPort: 80 # Container port
  type: NodePort     # For ingress/LB, NodePort or ClusterIP works (GCE ingress me ClusterIP bhi chalega)
